[gd_scene load_steps=8 format=3 uid="uid://cqonoawkn70wl"]

[ext_resource type="Script" uid="uid://byu42wf4jsnp4" path="res://ui/win_screen_menu/win_screen.gd" id="1_qkho6"]
[ext_resource type="FontFile" uid="uid://b5jqc46nd8338" path="res://fonts/m6x11.ttf" id="2_q2lv4"]
[ext_resource type="FontFile" uid="uid://b0rxba54kbo4h" path="res://fonts/m6x11plus.ttf" id="3_4pxor"]
[ext_resource type="PackedScene" uid="uid://bf63g5uh508r6" path="res://ui/cursor/cursor.tscn" id="4_hk32q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_an6mr"]
bg_color = Color(0.203922, 0.67451, 0.729412, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.45098, 0.27451, 0.298039, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d401d"]
bg_color = Color(0.933333, 0.415686, 0.486275, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.45098, 0.27451, 0.298039, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yg86c"]
bg_color = Color(0.203922, 0.67451, 0.729412, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.45098, 0.27451, 0.298039, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="WinScreen" type="Control" node_paths=PackedStringArray("day_label", "score_label", "main_menu_button", "cursor")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qkho6")
day_label = NodePath("CanvasLayer/DayLabel")
score_label = NodePath("CanvasLayer/ScoreLabel")
main_menu_button = NodePath("CanvasLayer/MainMenuButton")
cursor = NodePath("CanvasLayer/Cursor")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 646.0
offset_bottom = 372.0
color = Color(1, 0.905882, 0.839216, 1)
metadata/_edit_use_anchors_ = true

[node name="Title" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 44.0
offset_right = 206.0
offset_bottom = 134.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.933333, 0.415686, 0.486275, 1)
theme_override_fonts/font = ExtResource("2_q2lv4")
theme_override_font_sizes/font_size = 32
text = "Yes!

We did it! I accomplished so much!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="DayLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = 158.0
offset_right = 177.0
offset_bottom = 217.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.670588, 0.337255, 0.458824, 1)
theme_override_fonts/font = ExtResource("2_q2lv4")
theme_override_font_sizes/font_size = 32
text = "Completed at: Day "
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -179.0
offset_top = 197.0
offset_right = 177.0
offset_bottom = 256.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.670588, 0.337255, 0.458824, 1)
theme_override_fonts/font = ExtResource("2_q2lv4")
theme_override_font_sizes/font_size = 32
text = "Score: 0"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="MainMenuButton" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(0, 20)
offset_left = 244.0
offset_top = 244.0
offset_right = 392.0
offset_bottom = 292.0
theme_override_colors/font_hover_pressed_color = Color(1, 0.905882, 0.839216, 1)
theme_override_colors/font_hover_color = Color(1, 0.905882, 0.839216, 1)
theme_override_colors/font_outline_color = Color(0.45098, 0.27451, 0.298039, 1)
theme_override_colors/font_color = Color(1, 0.905882, 0.839216, 1)
theme_override_colors/font_pressed_color = Color(1, 0.905882, 0.839216, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_4pxor")
theme_override_font_sizes/font_size = 36
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_an6mr")
theme_override_styles/hover = SubResource("StyleBoxFlat_d401d")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yg86c")
theme_override_styles/normal = SubResource("StyleBoxFlat_d401d")
text = "Main Menu"
metadata/_edit_use_anchors_ = true

[node name="Cursor" parent="CanvasLayer" instance=ExtResource("4_hk32q")]

[connection signal="mouse_entered" from="CanvasLayer/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/MainMenuButton" to="." method="_on_main_menu_button_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
